--- a/site1.conf
+++ b/site1.conf
@@ -29,4 +29,6 @@
     sql_seticon => "UPDATE user_tbl SET icon = ? WHERE email = ?",
     sql_outdellock => "UPDATE uploadfile_tbl SET dellock = 0 WHERE oid = ?",
     sql_setdellock => "UPDATE uploadfile_tbl SET dellock = 1 WHERE oid = ?",
+    sql_sesi_email => "SELECT email FROM signup_tbl WHERE sessionid = ?",
+    sql_getchatmemb => "SELECT username,icon FROM user_tbl WHERE email = ?",
 }
