Google+ login fix

--- a/site1.conf
+++ b/site1.conf
@@ -5,15 +5,17 @@
     dbhost => "192.168.0.8",
     sql1   => "select * from signup_tbl limit 1",
     sql_signup => "INSERT INTO signup_tbl(email,sessionid) VALUES(?,?)",
+    sql_signup_gp => "INSERT INTO signup_tbl(email,sessionid,atoken,rtoken) VALUES(?,?,?,?)",
     sql_user => "INSERT INTO user_tbl(email,username,password,uid) VALUES(?,?,?,?)",
     sql_chk_signup => "SELECT email FROM signup_tbl WHERE email = ? ",
     sql_signup_chk => "SELECT sessionid FROM signup_tbl where sessionid = ?",
     sql_user_chk => "SELECT username,uid,icon FROM user_tbl WHERE email = ?",
-    sql_sid_chk => "SELECT email FROM signup_tbl WHERE sessionid = ?",
+    sql_sid_chk => "SELECT email,atoken,rtoken FROM signup_tbl WHERE sessionid = ?",
     sql_signin_chk => "SELECT username FROM user_tbl WHERE email = ? and password = ?",
     sql_signup_update => "UPDATE signup_tbl SET sessionid = ? WHERE email = ?",
     sql_email_update => "UPDATE user_tbl SET email = ? WHERE email = ?",
     sql_email_update_sid => "UPDATE signup_tbl SET email = ? WHERE sessionid = ?",
+    sql_atoken_update_sid => "UPDATE signup_tbl SET atoken = ? WHERE sessionid = ?",
     sql_uname_update => "UPDATE user_tbl SET username = ? WHERE email = ?",
     sql_passwd_update => "UPDATE user_tbl SET password = ? WHERE email = ?",
     sql_uid_chk => "SELECT uid FROM user_tbl WHERE email = ?",
