--- a/site1.conf
+++ b/site1.conf
@@ -13,6 +13,8 @@
     sql_sid_chk => "SELECT email,atoken,rtoken FROM signup_tbl WHERE sessionid = ?",
     sql_signin_chk => "SELECT username FROM user_tbl WHERE email = ? and password = ?",
     sql_signup_update => "UPDATE signup_tbl SET sessionid = ? WHERE email = ?",
+    sql_signup_update_gp1 => "UPDATE signup_tbl SET sessionid = ? WHERE email = ?",
+    sql_signup_update_gp2 => "UPDATE signup_tbl SET atoken = ? WHERE email = ?",
     sql_email_update => "UPDATE user_tbl SET email = ? WHERE email = ?",
     sql_email_update_sid => "UPDATE signup_tbl SET email = ? WHERE sessionid = ?",
     sql_atoken_update_sid => "UPDATE signup_tbl SET atoken = ? WHERE sessionid = ?",
